--- a/FelizAniversario/app/src/main/res/values/strings.xml
+++ b/FelizAniversario/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">HappyBirthday</string>
+    <string name="feliz_aniversrio_vitoria">Feliz aniversário Vitória!!!</string>
+    <string name="signature_text">De Jhonnathan</string>
 </resources>
