--- a/CartaoDeVisita/app/src/main/res/values/strings.xml
+++ b/CartaoDeVisita/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CartaoDeVisita</string>
+    <string name="jhonnathan_rodrigues">Jhonnathan Rodrigues</string>
 </resources>
