colocando funcionalidade na imagem

--- a/MaterialDesignPraticaDicasSemanais/app/src/main/res/values/strings.xml
+++ b/MaterialDesignPraticaDicasSemanais/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="app_name">MaterialDesign</string>
+
     <string name="segunda_feira">Segunda-feira</string>
     <string name="terca_feira">Terça-feira</string>
     <string name="quarta_feira">Quarta-feira</string>
